{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 8,
  "lineage": "995609dc-efb9-774b-5475-545d63dbe805",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856909714607:internet-gateway/igw-0cb2868d67704e897",
            "id": "igw-0cb2868d67704e897",
            "owner_id": "856909714607",
            "region": "ap-south-1",
            "tags": {
              "Name": "livetool-igw"
            },
            "tags_all": {
              "Name": "livetool-igw"
            },
            "vpc_id": "vpc-0fcb835fb90cbd1b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856909714607:route-table/rtb-05b23a95b9883ac95",
            "id": "rtb-05b23a95b9883ac95",
            "owner_id": "856909714607",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb2868d67704e897",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "livetool-rt"
            },
            "tags_all": {
              "Name": "livetool-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcb835fb90cbd1b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "856909714607",
            "id": "rtb-05b23a95b9883ac95",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f228d6adaaf83083",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "livetool-sg",
            "name_prefix": null,
            "owner_id": null,
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "livetool-sg"
            },
            "tags_all": {
              "Name": "livetool-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcb835fb90cbd1b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": null,
            "id": null,
            "region": null
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "assign_ipv6_address_on_creation": false,
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01976d3d9882109a5",
            "ipv6_native": false,
            "map_public_ip_on_launch": true,
            "region": "ap-south-1",
            "tags": {
              "Name": "livetool-subnet"
            },
            "tags_all": {
              "Name": "livetool-subnet"
            },
            "vpc_id": "vpc-0fcb835fb90cbd1b0"
          },
          "identity_schema_version": 0,
          "identity": {
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:856909714607:vpc/vpc-0fcb835fb90cbd1b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_route_table_id": "rtb-09257863a1355e09b",
            "default_security_group_id": "sg-055006dedadbce465",
            "dhcp_options_id": "dopt-056dcfaa524d7c946",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fcb835fb90cbd1b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09257863a1355e09b",
            "owner_id": "856909714607",
            "region": "ap-south-1",
            "tags": {
              "Name": "livetool-vpc"
            },
            "tags_all": {
              "Name": "livetool-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}